--- a/TP3-Filtros/code/coins.ipynb
+++ b/TP3-Filtros/code/coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primero creamos una funcion para aplicar ruido salt and pepper a la imagen. El mismo coloca pixels negros y blancos de forma random a lo largo de la imagen:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,26 +40,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Load Image\n",
-    "img = cv.imread(filename='../data/images/eight.tif', flags=cv.IMREAD_GRAYSCALE)\n",
-    "cv.imshow(mat = img, winname = 'Original')\n",
-    "cv.waitKey(0)"
+    "Observamos la imagen original:"
    ]
   },
   {
@@ -72,9 +63,17 @@
     }
    ],
    "source": [
-    "J = saltAndPepperNoisy(img)\n",
-    "cv.imshow(mat = J, winname = 'Original + Noise')\n",
+    "# Load Image\n",
+    "img = cv.imread(filename='../data/images/eight.tif', flags=cv.IMREAD_GRAYSCALE)\n",
+    "cv.imshow(mat = img, winname = 'Original')\n",
     "cv.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Luego observamos la imagen original más el ruido:"
    ]
   },
   {
@@ -94,6 +93,24 @@
     }
    ],
    "source": [
+    "J = saltAndPepperNoisy(img)\n",
+    "cv.imshow(mat = J, winname = 'Original + Noise')\n",
+    "cv.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicamos un pasabajos a la imagen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "kernel = np.ones((3,3),np.float32)/9\n",
     "K = cv.filter2D(J,-1,kernel)\n",
     "cv.imshow(mat = K, winname = 'Lowpass filter')\n",
@@ -101,8 +118,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este filtro resulta de convolucionar la imagen con un kernel pasa bajos. Con el mismo se eliminan las frecuencias altas de la imagen, por lo que los bordes aparecen borrosos. Esto es equivalente a realizar un promedio de los pixels del kernel y reemplazar el valor central por el mismo.\n",
+    "Un kernel de 3x3 se ve de la siguiente manera:\n",
+    "$$ K = \\frac{1}{9} \\begin{bmatrix} 1 & 1 & 1 \\\\ 1 & 1 & 1 \\\\ 1 & 1 & 1 \\end{bmatrix} $$\n",
+    "Podemos ver que en la imagen resultante se siguen viendo pequeños cuadrados que resultan del promedio de el fondo con el ruido salt and pepper. Para eliminar del todo este ruido se intena en el proximo paso aplicar un filtro mediana."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicamos un filto mediana a la imagen:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +145,7 @@
        "-1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +157,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, el filtro mediana toma la media de todos lo spixels dentro del kernel en vez del promedio. De esta manera un pixel con un cambio aprupto en color no impacta de gran manera como en un pasa bajos. Este filtro no lineal sirve muy bien para casos con ruido como lo es el ruido salt and pepper. Esto tambien se debe a que con la operacion media, el pixel central siempre se reemplaza con un pixel ya existente en el kernel, a diferencia de un pasa bajos el cual el nuevo valor puede no estar en la imagen original. En la imagen nueva generada se puede apreciar como este filtro elimina con exito el ruido salt and pepper de  la imagen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente mostramos la comparación de los cuatro casos juntos:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -133,15 +181,15 @@
        "-1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display\n",
-    "display = np.hstack((J, K, L))\n",
-    "cv.imshow(mat = display, winname = 'Noisy vs Lowpass filter vs Median Blurring')\n",
+    "display = np.hstack((img, J, K, L))\n",
+    "cv.imshow(mat = display, winname = 'Original vs Noisy vs Lowpass filter vs Median Blurring')\n",
     "cv.waitKey(0)"
    ]
   }
