--- a/TP5/image_reconstruction.ipynb
+++ b/TP5/image_reconstruction.ipynb
@@ -99,9 +99,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (dip)",
+   "display_name": "Python (images)",
    "language": "python",
-   "name": "dip"
+   "name": "images"
   },
   "language_info": {
    "codemirror_mode": {
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
