--- a/TP5/image_reconstruction_Copy.ipynb
+++ b/TP5/image_reconstruction_Copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "BAdRit5-S_gJ"
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "OXFKDubES_hj"
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "5Ks3bQw6S_iA"
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {
     "id": "apfi9kHyS_md"
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {
     "id": "wiQzE9XlS_nw"
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {
     "id": "VSVizJYwbk9o"
    },
@@ -155,30 +155,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[145, 138, 151, ..., 108, 113, 117],\n",
+       "        [150, 117, 150, ..., 121, 120, 113],\n",
+       "        [127, 143, 132, ...,  84,  82,  88],\n",
+       "        ...,\n",
+       "        [ 30,  35,  12, ...,  55,  27,  68],\n",
+       "        [  3,   0,   8, ...,  71,  89,  63],\n",
+       "        [ 28,  36,  26, ...,  82,  52,  29]], dtype=uint8),\n",
+       " array([[115, 138, 128, ..., 122, 107, 117],\n",
+       "        [ 95, 129, 154, ..., 127,  97, 112],\n",
+       "        [142, 137, 124, ...,  72, 102,  53],\n",
+       "        ...,\n",
+       "        [ 10,  40,  42, ...,  37,  39,  48],\n",
+       "        [ 35,  12,   8, ...,  58,  57,  59],\n",
+       "        [ 21,  42,  41, ...,  56,  45,  53]], dtype=uint8),\n",
+       " array([[163, 167, 109, ..., 125, 128, 141],\n",
+       "        [137, 122, 133, ..., 125, 138,  96],\n",
+       "        [132, 134, 126, ...,  80, 100,  78],\n",
+       "        ...,\n",
+       "        [ 54,  29,  31, ...,  14,  28,  54],\n",
+       "        [ 40,  55,  45, ...,  61,  45,  41],\n",
+       "        [ 34,  43,  35, ...,  33,  77,  55]], dtype=uint8)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.split(lenna_blur_noise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "id": "yGTHZmGusV5n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-42-b08309efc1ad>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-42-b08309efc1ad>\"\u001b[1;36m, line \u001b[1;32m17\u001b[0m\n\u001b[1;33m    wiener_filter = np.divide(np.multiply(H.conjugate(), sf), np.multiply((np.abs(H))**2, sf) + sn ) )\u001b[0m\n\u001b[1;37m                                                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def recover(img, h, sn=None, wiener_inverse=False, show = True):\n",
-    "\n",
+    "    \n",
+    "  #preparing H  \n",
     "  a, b, _ = img.shape\n",
     "  padded_kernel = np.zeros(shape=(a, b))\n",
     "  c, d = h.shape\n",
     "  padded_kernel[a//2 - c//2:a//2 + c//2 +1, b//2 - d//2: b//2 + d//2 +1] = h\n",
-    "  centered_fft2_kernel = fftshift(fft2(fftshift(padded_kernel)))\n",
-    "  centered_fft2_kernel += 1.2\n",
-    "  h = centered_fft2_kernel\n",
+    "  centered_fft2_kernel = fftshift(fft2(padded_kernel))\n",
+    "  #centered_fft2_kernel += 1.2\n",
+    "  H = centered_fft2_kernel\n",
     "\n",
     "  channels = []\n",
-    "  for channel in cv.split(img):\n",
-    "    channel = fftshift(fft2(channel))\n",
+    "  for channel in cv.split(img):  #channel represents each R, B and G channel.\n",
+    "    channel_fft = fftshift(fft2(channel))\n",
     "    if wiener_inverse:\n",
-    "      sf = channel\n",
-    "      clean_lena = channel / h * np.abs(h)**2 / (np.abs(h)**2 + sn / sf)\n",
+    "      sf = channel_fft\n",
+    "      wiener_filter = np.divide(np.multiply(H.conjugate(), sf), np.multiply((np.abs(H))**2, sf) + sn ) )\n",
+    "      clean_lena = np.multiply(chanel_fft, wiener_filter)\n",
+    "      #clean_lena = np.multiply(np.divide(channel_fft, H), np.divide(np.abs(H)**2, (np.abs(H)**2 + np.divide(sn,sf))))\n",
     "    else:\n",
-    "      clean_lena = channel / h\n",
+    "      clean_lena = np.divide(channel_fft, H)\n",
     "\n",
     "    # filtered image ifft2 and normalize to unity\n",
     "    clean_lena = np.abs(ifft2(ifftshift(clean_lena)))\n",
@@ -194,7 +246,7 @@
     "    clean_lena = channels\n",
     "  newww = np.hstack((clean_lena, img))\n",
     "  if show:\n",
-    "        cv2_imshow('recovery', newww)\n",
+    "        cv2_imshow('recovered <LEFT>, original <RIGHT>', newww)\n",
     "        cv.waitKey(0)\n",
     "        cv.destroyAllWindows()\n",
     "  return clean_lena"
@@ -202,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -230,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -246,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -274,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "id": "qFsvKj7TT-IT"
    },
@@ -288,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -340,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,43 +428,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.09090909 0.         0.         0.         0.09090909]\n",
-      " [0.09090909 0.         0.         0.         0.09090909]\n",
-      " [0.09090909 0.         0.09090909 0.         0.09090909]\n",
-      " [0.09090909 0.         0.         0.         0.09090909]\n",
-      " [0.09090909 0.         0.         0.         0.09090909]]\n",
-      "[[0.09090909 0.09090909 0.09090909 0.09090909 0.09090909]\n",
-      " [0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.09090909 0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]\n",
-      " [0.09090909 0.09090909 0.09090909 0.09090909 0.09090909]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kernel_h_motion = np.zeros((5, 5))\n",
-    "kernel_v_motion = np.zeros((5, 5))\n",
+    "kernel_h_motion = np.zeros((21, 21))\n",
+    "kernel_v_motion = np.zeros((21, 21))\n",
     "\n",
-    "k = 1 / 11\n",
-    "kernel_h_motion[0, :] = k\n",
-    "kernel_h_motion[4, :] = k\n",
-    "kernel_h_motion[2, 2] = k\n",
+    "k = 1 / 21\n",
     "\n",
-    "kernel_v_motion[:, 0] = k\n",
-    "kernel_v_motion[:, 4] = k\n",
-    "kernel_v_motion[2, 2] = k\n",
+    "kernel_h_motion[2, :] = k\n",
+    "\n",
+    "kernel_v_motion[:, 2] = k\n",
     "\n",
     "\n",
     "\n",
-    "print(kernel_v_motion)\n",
-    "print(kernel_h_motion)"
+    "#print(kernel_v_motion)\n",
+    "#print(kernel_h_motion)"
    ]
   },
   {
@@ -424,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
